--- a/titan/settings/bouquets.cfg
+++ b/titan/settings/bouquets.cfg
@@ -8,19 +8,18 @@ SKY BUNDESLIGA#0#/var/etc/titan/bouquets.sky_bundesliga
 KINDER#0#/var/etc/titan/bouquets.kinder
 MUSIK#0#/var/etc/titan/bouquets.musik
 SKY SELECT#0#/var/etc/titan/bouquets.sky_select
+Österreich#0#/var/etc/titan/bouquets.oesterreich
+AustriaSat#0#/var/etc/titan/bouquets.austriasat
+HDTV#0#/var/etc/titan/bouquets.hdtv
 PPV HD#0#/var/etc/titan/bouquets.ppv_hd
+Schweiz#0#/var/etc/titan/bouquets.schweiz
 Kabel Deutschland#0#/var/etc/titan/bouquets.kabel_deutschland
 UK TV#0#/var/etc/titan/bouquets.uk_tv
 SkyUK#0#/var/etc/titan/bouquets.skyuk
 Ital#0#/var/etc/titan/bouquets.ital
 Sport#0#/var/etc/titan/bouquets.sport
-Erotik#0#/var/etc/titan/bouquets.erotik
-Oesterreich#0#/var/etc/titan/bouquets.oesterreich
-AustriaSat#0#/var/etc/titan/bouquets.austriasat
-Schweiz#0#/var/etc/titan/bouquets.schweiz
 NED#0#/var/etc/titan/bouquets.ned
 XXX#0#/var/etc/titan/bouquets.xxx
 Favourites (TV)#0#/var/etc/titan/bouquets.favourites_(tv)
 RADIO DEUTSCH_radio#1#/var/etc/titan/bouquets.radio_deutsch_radio
-SKY RADIO_radio#1#/var/etc/titan/bouquets.sky_radio_radio
 Favourites (Radio)_radio#1#/var/etc/titan/bouquets.favourites_(radio)_radio
