--- a/titan/settings/titan.cfg
+++ b/titan/settings/titan.cfg
@@ -43,7 +43,7 @@ fontfile1=/var/usr/share/fonts/default.ttf
 fontfile2=/var/usr/share/fonts/tuxtxt.ttf
 tuxtxtfile=/sbin/tuxtxt.sh
 localepath=/var/usr/local/share/titan
-skins=/var/usr/local/share/titan/skin;/var/swap/titanskin
+skins=/var/usr/local/share/titan/skin;/var/swap/titanskins
 defskinfile=/var/usr/local/share/titan/skin/default/skin.xml
 skinfile=/var/usr/local/share/titan/skin/default/skin.xml
 defskinpath=/var/usr/local/share/titan/skin/default
