[titan] update settings

--- a/settings/titan.cfg
+++ b/settings/titan.cfg
@@ -94,3 +94,4 @@ pichwdecode=0
 epgbutton=0
 av_videomode=1080i50
 restorecmd=cp -r /etc/titan.restore/* /var/etc/titan
+checkemucmd=emu.sh checkinstall
