--- a/settings/titan.cfg
+++ b/settings/titan.cfg
@@ -59,6 +59,7 @@ bouquetpath=/var/etc/titan
 bouquetfile=/var/etc/titan/bouquets.cfg
 providerfile=/var/etc/titan/provider
 epgchannelfile=/var/etc/titan/epgchannel
+unicableconfig=/var/etc/titan/unicable.cfg
 piconpath=/var/usr/local/share/titan/picons
 rcmapfile=/var/etc/titan/rcmap
 httpdpath=/var/usr/local/share/titan/web
