--- a/titan/settings/titan.cfg
+++ b/titan/settings/titan.cfg
@@ -68,7 +68,7 @@ playlistpath=/var/etc/titan
 playlistfile=/var/etc/titan/playlist
 skriptaftertv=/var/etc/autostart/start.sh last &
 httpdstart=1
-lang=po/en
+lang=po/de
 debuglevel=10
 vol=30
 usedirectfb=0
