[titan] ARD HD as first service and AV Mode 720p50

--- a/settings/titan.cfg
+++ b/settings/titan.cfg
@@ -86,14 +86,14 @@ imdb_replace=False
 style=1
 sound=off
 channellist=(BOUQUET)-MEIN TV
-serviceid=12003
-transponderid=66625
+serviceid=11100
+transponderid=66547
 fe_00_sat1=192
 fe_00_lnb1=1
 fe_00_diseqc1=1
 faststop=1
 pichwdecode=0
 epgbutton=0
-av_videomode=1080i50
+av_videomode=720p50
 restorecmd=cp -r /etc/titan.restore/* /var/etc/titan
 checkemucmd=emu.sh checkinstall
