[titan] add helpsystem

--- a/settings/titan.cfg
+++ b/settings/titan.cfg
@@ -51,6 +51,7 @@ defskinpath=/var/usr/local/share/titan/skin/default
 skinpath=/var/usr/local/share/titan/skin/default
 channelfile=/var/etc/titan/channel
 satfile=/var/etc/titan/satellites
+helppath=/var/usr/local/share/titan/help
 transponderfile=/var/etc/titan/transponder
 rcconfig=/var/etc/titan/rcconfig
 defskinconfig=/var/usr/local/share/titan/skin/default/skinconfig
