--- a/titan/settings/titan.cfg
+++ b/titan/settings/titan.cfg
@@ -97,3 +97,6 @@ epgbutton=0
 av_videomode=720p50
 restorecmd=cp -r /etc/titan.restore/* /var/etc/titan
 checkemucmd=emu.sh checkinstall
+powerofflogo=/var/etc/boot/poweroff.jpg
+restartlogo=/var/etc/boot/reboot.jpg
+guirestartlogo=/var/etc/boot/bootlogo.jpg
