--- a/titan/settings/titan.cfg
+++ b/titan/settings/titan.cfg
@@ -100,3 +100,4 @@ checkemucmd=emu.sh checkinstall
 powerofflogo=/var/etc/boot/poweroff.jpg
 restartlogo=/var/etc/boot/reboot.jpg
 guirestartlogo=/var/etc/boot/bootlogo.jpg
+secondinfobar=2
