[titan] set default 2nd info action to epg -> thx Thomas

--- a/settings/titan.cfg
+++ b/settings/titan.cfg
@@ -100,3 +100,4 @@ checkemucmd=emu.sh checkinstall
 powerofflogo=/var/etc/boot/poweroff.jpg
 restartlogo=/var/etc/boot/reboot.jpg
 guirestartlogo=/var/etc/boot/bootlogo.jpg
+secondinfobar=2
