--- a/settings/titan.cfg
+++ b/settings/titan.cfg
@@ -91,6 +91,7 @@ channellist=(BOUQUET)-MEIN TV
 serviceid=11100
 transponderid=66547
 fe_00_sat1=192
+fe_00_maxsat=1
 faststop=1
 pichwdecode=0
 epgbutton=0
