--- a/titan/settings/titan.cfg
+++ b/titan/settings/titan.cfg
@@ -102,3 +102,4 @@ powerofflogo=/var/etc/boot/poweroff.jpg
 restartlogo=/var/etc/boot/reboot.jpg
 guirestartlogo=/var/etc/boot/bootlogo.jpg
 secondinfobar=2
+browserhome=http://www.atemio.de
