--- a/titan/settings/titan.cfg
+++ b/titan/settings/titan.cfg
@@ -96,7 +96,7 @@ faststop=1
 pichwdecode=0
 epgbutton=0
 av_videomode=720p50
-restorecmd=cp -r /etc/titan.restore/* /var/etc/titan
+restorecmd=cp -r /etc/titan.restore/* /var
 checkemucmd=emu.sh checkinstall
 powerofflogo=/var/etc/boot/poweroff.jpg
 restartlogo=/var/etc/boot/reboot.jpg
