--- a/titan/Makefile.am
+++ b/titan/Makefile.am
@@ -3,15 +3,16 @@ ALL_CFLAGS= -DSH4 -DEPLAYER3AUS -DDVDPLAYER -Os -export-dynamic -Wall -Wno-unuse
 INCLUDES = \
 	-I../../../tufsbox/cdkroot/usr/include \
 	-I../../../tufsbox/cdkroot/usr/include/freetype2 \
+	-I../../../tufsbox/cdkroot/usr/include/openssl \
 	-I../../driver/bpamem \
 	-I../../../apps/titan/libdreamdvd \
 	-I../../../apps/tools/libeplayer3/include \
-	-I../../../apps/tools/libmmeimage \
+	-I../../../apps/tools/libmme_image \
 	-I../../../apps/titan/titan
 
 bin_PROGRAMS = titan
 
 titan_SOURCES =	titan.c
 
-titan_LDADD = -lm -lpthread -ldl -lpng -lfreetype -leplayer3 -ldreamdvd -ljpeg -lmmeimage -lmme_host -lz
+titan_LDADD = -lm -lpthread -ldl -lpng -lfreetype -leplayer3 -ldreamdvd -ljpeg -lz -lmmeimage -lmme_host -lssl -lcrypto
 titan_CFLAGS = $(ALL_CFLAGS)
